--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/AnimateNew.css" rel="stylesheet">
+    <script src="./js/script.js"></script>
 </head>
+
 <body>
-    <h1>Hello GithubPages</h1>
-    <p>这是我的个人主页</p>
+    <!-- 进入主页div -->
+    <div id="allTopDiv">
+        <div id="photo">
+            <img src="./img/photo1.png">
+        </div>
+        <div id="welcome">
+            <p id="chinese" class="animated pulse delay-1s">欢迎来到我的主页</p>
+            <p id="english" class="myanimated animated infinite swing delay-3s">Welcome to my HOME !</p>
+        </div>
+    </div>
+    <!-- 导航 -->
+    <div id="nav">
+        <ul>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#information">INFORMATION</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+        </ul>
+    </div>
+    <div id="home" class="dv">home</div>
+    <div id="about" class="dv">about</div>
+    <div id="information" class="dv">information</div>
+    <div id="contact" class="dv">contact</div>
+    <div id="footer">
+        底部
+    </div>
 </body>
+
 </html>
